--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ description = "Default template for PDM package"
 authors = [
     {name = "khr0106", email = "kanghr990106@gmail.com"},
 ]
-dependencies = []
+dependencies = ["pytest>=8.3.4"]
 requires-python = ">=3.10"
 readme = "README.md"
 license = {text = "MIT"}
